[FIX] Landing overlap on small screens

--- a/src/assets/scss/base/_config.scss
+++ b/src/assets/scss/base/_config.scss
@@ -105,3 +105,11 @@ $breakpoints: (
     xl: 1200px
 );
 
+$vbreakpoints:(
+    xs: 400px,
+    sm: 600px,
+    md: 768px,
+    lg: 1200px,
+    xl: 1920px
+)
+
